--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,13 @@
+@import "./scss/variables";
+
 .App {
-color: red;
+
+    h1 {
+        color: red;
+    }
+
+    h2 {
+        color: $primary-color;
+    }
 
 }
